2001-11-29  MORIOKA Tomohiko  <tomo@kanji.zinbun.kyoto-u.ac.jp>

	* Ideograph-R131-Minister.el (C3-2A5C): Separated from U+5367 and
	moved from Ideograph-R025-Divination.el.

	* Ideograph-R035-Go-Slowly.el: Merge some CJK Ext-B code points.

	* Ideograph-R034-Go.el (J0-5469): Unify BC-8B45.
	Merge some CJK Ext-B code points.

	* Ideograph-R031-Enclosure.el: Add some CHINA3-JEF code points.

	* Ideograph-R019-Power.el: Add some CHINA3-JEF code points.
	(M-02305): Unify C4-2240, JC3-44D9 and U+3515.
	(M-02395): Unify C6-3D4E.
	(M-02397): Unify C6-3D4F.
	(M-02401): Unify C6-3D4D.

	* Ideograph-R018-Knife.el: Add some CHINA3-JEF code points.
	(M-02112): Add `ideographic-structure'.

	* Ideograph-R015-Ice.el: Add some missing `ideographic-structure'
	properties.

	* Ideograph-R005-Second.el (BC-87D3): Moved to
	Ideograph-R037-Big.el; unify C6-2167.

2001-11-29  MORIOKA Tomohiko  <tomo@kanji.zinbun.kyoto-u.ac.jp>

	* Ideograph-R181-Leaf.el (JC3-8CE9): New character.

	* Ideograph-R122-Net.el (C4-2152): Separated from U+5188 and moved
	from Ideograph-R013-Down-Box.el.

	* Ideograph-R032-Earth.el (M-05234): Use `<-original-ideograph'
	instead of `original-ideograph-of'.
	(M-05291): New character.
	(C6-3E32): Relate to M-05291.
	(M-05352): Unify C6-5152 instead of C4-3C5A.

	* Ideograph-R030-Mouth.el: Merge some CHINA3-JEF code points.

	* Ideograph-R025-Divination.el (U+5361): Unify JC3-82B5.
	(U+5367): Separate C3-2A5C and moved it to
	Ideograph-R131-Minister.el.

	* Ideograph-R023-Hiding-Enclosure.el, Ideograph-R020-Wrap.el:
	Merge some CHINA3-JEF code points.

2001-11-29  MORIOKA Tomohiko  <tomo@kanji.zinbun.kyoto-u.ac.jp>

	* Ideograph-R029-Again.el: Add some CHINA3-JEF code points.
	(C6-3D67): Unify M-48963.
	(C1-5937): Use `->identical' instead of `ideograph='.

	* Ideograph-R028-Private.el: Add some CHINA3-JEF code points.
	(C4-2856): Delete `non-morohashi'; unify M-48989.

	* Ideograph-R027-Cliff.el (M-02979): Unify C6-3D60 and U-00020A78.