@@ -246,7 +246,11 @@ static size_t max_size;
 static int pdump_fd;
 static void *pdump_buf;
 
+#ifdef UTF2000
+#define PDUMP_HASHSIZE 20000001
+#else
 #define PDUMP_HASHSIZE 200001
+#endif
 
 static pdump_entry_list_elmt **pdump_hash;
 
